# quicklog

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  clang_format.patch  output
.circleci/: config.yml
bad_tests/: Makefile
bad_tests/include/qkl/usr/: config.h  platform.h
bad_tests/src/: main.c
bad_tests/src/qkl/usr/: config.c
buildresults/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  compile_commands.json
buildresults/Testing/Temporary/: CTestCostData.txt
buildresults/tests/speed_test/: CTestTestfile.cmake  cmake_install.cmake  speed_test
buildresults/tests/speed_test/quicklog_config/: CTestTestfile.cmake  cmake_install.cmake
buildresults/tests/unittests/: CTestTestfile.cmake  cmake_install.cmake  unittests
buildresults/tests/unittests/quicklog_config/: CTestTestfile.cmake  cmake_install.cmake
buildresults/tests/unittests/quicklog_platform/: CTestTestfile.cmake  cmake_install.cmake
cmake/: BuildOptions.cmake  Once.cmake  StaticAnalysis.cmake
configs/basic_desktop/: CMakeLists.txt
configs/basic_desktop/include/: qkl_usr_config.h
configs/basic_desktop/src/: qkl_usr_config.c
configs/basic_zephyr/: CMakeLists.txt
configs/basic_zephyr/include/: qkl_usr_config.h
configs/basic_zephyr/src/: qkl_usr_config.c
configs/unittest/: CMakeLists.txt
configs/unittest/include/: log_out_buffer.h  qkl_usr_config.h
configs/unittest/src/: log_out_buffer.cpp  qkl_assert.c
example/: Makefile
examples/basic/: CMakeLists.txt
examples/basic/src/: main.c
examples/speed_test/: CMakeLists.txt
include/: doctest.h  qkl.h  qkl_decode.h  qkl_encode.h  qkl_entry.h  qkl_lr_buff.h  qkl_prod.h  qkl_sem.h  qkl_server.h  qkl_usr_config.h  qkl_usr_platform.h
include/doctest/: doctest.h
include/qkl/: client.h  client_t.h  config.h  decode.h  encode.h  entry.h  lr_buff.h  platform.h  prod.h  qkl_decode.h  qkl_encode.h  qkl_entry.h  qkl_lr_buff.h  qkl_prod.h  qkl_sem.h  qkl_server.h  sem.h  server.h
include/qkl/usr/: config.h  platform.h  platform.h.orig
programs/: makefile-base.mk
programs/example/: Makefile
programs/example/include/qkl/usr/: platform.h
programs/example/src/: main.c
programs/speed_test/: Makefile
programs/speed_test/src/: main.cpp
programs/unittests/include/: log_out_buffer.h
programs/unittests/include/qkl/usr/: config.h
programs/unittests/src/: c_tests.c  qkl_assert.c
src/: client.c  decode.c  lr_buff.c  main.c  qkl_decode.c  qkl_lr_buff.c  qkl_prod.c  qkl_sem.c  qkl_server.c  qkl_usr_config.c  qkl_usr_platform.c  sem.c  server.c
src/qkl/: client.c  decode.c  lr_buff.c  prod.c  sem.c  server.c
src/qkl/usr/: config.c  platform.c
tests/: Makefile
tests/include/: log_out_buffer.h
tests/include/qkl/usr/: config.h  platform.h
tests/speed_test/: CMakeLists.txt
tests/speed_test/src/: main.cpp
tests/src/: c_tests.c  log_out_buffer.cpp  main.cpp  tests.cpp
tests/src/qkl/usr/: config.cpp
tests/unittests/: CMakeLists.txt  Makefile
tests/unittests/include/: c_tests.h
tests/unittests/src/: c_tests.c  log_out_buffer.cpp  tests.cpp
tools/: clang-tidy.sh  ctest2junit.sh  ctest2junit.xsl  format-patch.sh  format-test.sh  format.sh  junit.xsd  junit2txt.xsl  sanitizer-test.sh  sources.sh
